--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pancakeswap/sdk",
+  "name": "@pancakefork/sdk",
   "license": "MIT",
   "version": "2.3.2",
   "description": "🛠 An SDK for building applications on top of Pancakeswap.",
@@ -8,7 +8,7 @@
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/pancakeswap/pancakeswap-sdk.git",
+  "repository": "https://github.com/swap-xfree/pancake-swap-sdk.git",
   "keywords": [
     "pancakeswap",
     "bsc"
