--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
   "engines": {
     "node": ">=10"
   },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "prettier": {
     "printWidth": 120,
     "semi": false,
