--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@pancakefork/sdk",
   "license": "MIT",
-  "version": "2.3.2",
-  "description": "🛠 An SDK for building applications on top of Pancakeswap.",
+  "version": "2.3.3",
+  "description": "🛠 An SDK for building applications on top of Freefinance.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
